# tp-3-mikolajtymekekipasuper

biblioteka/: CMakeLists.txt  biblioteka.cpp  biblioteka.hpp  main2.cpp  point.hpp
